fix alignment issues which comes from last commit

--- a/packages/css/src/components/checkbox.scss
+++ b/packages/css/src/components/checkbox.scss
@@ -1,6 +1,6 @@
 .checkbox-wrap {
   height: 38px;
-  @apply flex mb-md relative items-center;
+  @apply flex mb-md relative items-baseline;
 
   input {
     width: 38px;
